--- a/themes/wmgk/assets/css/wmgk.css
+++ b/themes/wmgk/assets/css/wmgk.css
@@ -4009,9 +4009,7 @@ Link posts contain a link to an external site. They can also optionally have a f
   background-position: center center; }
 
 .article__content {
-  margin-bottom: 1.5em;
-  font-size: 16px;
-  line-height: 1.6; }
+  margin-bottom: 1.5em; }
   @media screen and (min-width: 1024px) {
     .article__content {
       margin-bottom: 4.5em; } }
@@ -4107,44 +4105,49 @@ Link posts contain a link to an external site. They can also optionally have a f
 
   .article__list--title:after {
     margin: 0 1.25em 0 1.5em; } }
-.article__content .alignleft, .article__content img.alignleft {
-  display: block;
-  margin: 0 1em 16px;
-  float: left; }
-.article__content .alignright, .article__content img.alignright {
-  display: block;
-  margin: 0 0 16px 1em;
-  float: right; }
-.article__content .aligncenter, .article__content img.aligncenter {
-  margin: 0 auto 1em; }
-.article__content .size-auto,
-.article__content .size-full,
-.article__content .size-large,
-.article__content .size-medium,
-.article__content .size-thumbnail {
-  max-width: 100%;
-  height: auto; }
-.article__content .wp-caption {
-  max-width: 100%;
-  padding: 0;
-  margin: 0 0 16px;
-  background: #d0d2d3; }
-.article__content .wp-caption img {
-  width: 100%;
-  margin-bottom: 0;
-  max-width: 100%; }
-.article__content .wp-caption p.wp-caption-text {
-  padding: 16px 1.25em 20px;
-  margin: 4px .5em;
-  font-size: 0.79012em;
-  text-align: left; }
-.article__content blockquote {
-  background: url("../../../../themes/greatermedia/assets/../images/article__blockquote-icon.svg") no-repeat 0 0.35em;
-  border: none;
-  padding: 0 0 0 4em;
-  min-height: 6.4em; }
-  .article__content blockquote, .article__content blockquote p {
-    color: #6d6e70; }
+.article__content {
+  font-size: 16px;
+  line-height: 1.6; }
+  .article__content .alignleft, .article__content img.alignleft {
+    display: block;
+    margin: 0 1em 16px;
+    float: left; }
+  .article__content .alignright, .article__content img.alignright {
+    display: block;
+    margin: 0 0 16px 1em;
+    float: right; }
+  .article__content .aligncenter, .article__content img.aligncenter {
+    margin: 0 auto 1em; }
+  .article__content .size-auto,
+  .article__content .size-full,
+  .article__content .size-large,
+  .article__content .size-medium,
+  .article__content .size-thumbnail {
+    max-width: 100%;
+    height: auto; }
+  .article__content .wp-caption {
+    max-width: 100%;
+    padding: 0;
+    margin: 0 0 16px;
+    background: #d0d2d3; }
+  .article__content .wp-caption img {
+    width: 100%;
+    margin-bottom: 0;
+    max-width: 100%; }
+  .article__content .wp-caption p.wp-caption-text {
+    padding: 16px 1.25em 20px;
+    margin: 4px .5em;
+    font-size: 0.79012em;
+    text-align: left; }
+  .article__content blockquote {
+    background: url("../../../../themes/greatermedia/assets/../images/article__blockquote-icon.svg") no-repeat 0 0.35em;
+    border: none;
+    padding: 0 0 0 4em;
+    min-height: 6.4em; }
+    .article__content blockquote, .article__content blockquote p {
+      color: #6d6e70; }
+  .article__content h1, .article__content h2, .article__content h3, .article__content h4, .article__content h5, .article__content h6 {
+    margin: 25.6px 0; }
 
 .article__comments {
   margin: 3em 0; }
@@ -7174,9 +7177,7 @@ a.social-share-link {
   background-position: center center; }
 
 .article__content {
-  margin-bottom: 1.5em;
-  font-size: 16px;
-  line-height: 1.6; }
+  margin-bottom: 1.5em; }
   @media screen and (min-width: 1024px) {
     .article__content {
       margin-bottom: 4.5em; } }
@@ -7272,44 +7273,49 @@ a.social-share-link {
 
   .article__list--title:after {
     margin: 0 1.25em 0 1.5em; } }
-.article__content .alignleft, .article__content img.alignleft {
-  display: block;
-  margin: 0 1em 16px;
-  float: left; }
-.article__content .alignright, .article__content img.alignright {
-  display: block;
-  margin: 0 0 16px 1em;
-  float: right; }
-.article__content .aligncenter, .article__content img.aligncenter {
-  margin: 0 auto 1em; }
-.article__content .size-auto,
-.article__content .size-full,
-.article__content .size-large,
-.article__content .size-medium,
-.article__content .size-thumbnail {
-  max-width: 100%;
-  height: auto; }
-.article__content .wp-caption {
-  max-width: 100%;
-  padding: 0;
-  margin: 0 0 16px;
-  background: #d0d2d3; }
-.article__content .wp-caption img {
-  width: 100%;
-  margin-bottom: 0;
-  max-width: 100%; }
-.article__content .wp-caption p.wp-caption-text {
-  padding: 16px 1.25em 20px;
-  margin: 4px .5em;
-  font-size: 0.79012em;
-  text-align: left; }
-.article__content blockquote {
-  background: url("../../../../themes/greatermedia/assets/../images/article__blockquote-icon.svg") no-repeat 0 0.35em;
-  border: none;
-  padding: 0 0 0 4em;
-  min-height: 6.4em; }
-  .article__content blockquote, .article__content blockquote p {
-    color: #6d6e70; }
+.article__content {
+  font-size: 16px;
+  line-height: 1.6; }
+  .article__content .alignleft, .article__content img.alignleft {
+    display: block;
+    margin: 0 1em 16px;
+    float: left; }
+  .article__content .alignright, .article__content img.alignright {
+    display: block;
+    margin: 0 0 16px 1em;
+    float: right; }
+  .article__content .aligncenter, .article__content img.aligncenter {
+    margin: 0 auto 1em; }
+  .article__content .size-auto,
+  .article__content .size-full,
+  .article__content .size-large,
+  .article__content .size-medium,
+  .article__content .size-thumbnail {
+    max-width: 100%;
+    height: auto; }
+  .article__content .wp-caption {
+    max-width: 100%;
+    padding: 0;
+    margin: 0 0 16px;
+    background: #d0d2d3; }
+  .article__content .wp-caption img {
+    width: 100%;
+    margin-bottom: 0;
+    max-width: 100%; }
+  .article__content .wp-caption p.wp-caption-text {
+    padding: 16px 1.25em 20px;
+    margin: 4px .5em;
+    font-size: 0.79012em;
+    text-align: left; }
+  .article__content blockquote {
+    background: url("../../../../themes/greatermedia/assets/../images/article__blockquote-icon.svg") no-repeat 0 0.35em;
+    border: none;
+    padding: 0 0 0 4em;
+    min-height: 6.4em; }
+    .article__content blockquote, .article__content blockquote p {
+      color: #6d6e70; }
+  .article__content h1, .article__content h2, .article__content h3, .article__content h4, .article__content h5, .article__content h6 {
+    margin: 25.6px 0; }
 
 .article__comments {
   margin: 3em 0; }
